# RPG-Maker

./: .gitignore  CMakeLists.txt  Engine.h  RPG Maker.sln  RPG Maker.vcxproj  RPG Maker.vcxproj.filters  Readme.md  brush.cpp  brush.h  camera.cpp  camera.h  collision.cpp  collision.h  core.cpp  core.h  eMath.cpp  eMath.h  editor.cpp  editor.h  engine.cpp  engineView.cpp  engineView.h  grid.cpp  grid.h  imgui-SFML.cpp  imgui.ini  main.cpp  paint.h  player.cpp  player.h  saveSceneTemplate.txt  test.txt  tile.cpp  tile.h  tool.h  vcpkg.json
editor/: CMakeLists.txt
editor/include/: base_editor.h  brush.h  brushPanel.h  button.h  buttonList.h  editor.h  element.h  folderDialog.h  imgui.ini  imgui_sfml_fix.h  saveManager.h  sceneRender.cpp  sceneRender.h  tileSelector.h  toolSelector.h
editor/include/elements/: animationPanel.h  autoTilePanel.h  brushPanel.h  button.h  consolePanel.h  dialogPanel.h  projectFileExplorer.h  sceneInspectorPanel.h  sceneManagerPanel.h  sceneRender.h  scriptCreator.h  shaderEditor.h  tileSelector.h  toolSelector.h
editor/src/: animationPanel.cpp  brushPanel.cpp  button.cpp  buttonList.cpp  consolePanel.cpp  dialogPanel.cpp  editor.cpp  imgui.ini  projectFileExplorer.cpp  saveManager.cpp  sceneInspectorPanel.cpp  sceneManagerPanel.cpp  sceneRender.cpp  scriptCreator.cpp  shaderEditor.cpp  tileSelector.cpp  toolSelector.cpp
engine/: CMakeLists.txt
engine/include/: autoTile.h  base_engine.h  camera.h  dialog.h  engine.h  fileContener.h  imgui.ini  layers.h  object.h  scene.h  shaderRenderer.h  tile.h  tilemap.h
engine/include/export/: exportObject.h
engine/src/: autoTile.cpp  camera.cpp  engine.cpp  exportObject.cpp  fileContener.cpp  layers.cpp  scene.cpp  shaderRenderer.cpp  tile.cpp  tilemap.cpp
include/imgui/: imconfig.h
include/imgui-sfml/: imgui-SFML.h
rpg_maker/include/: RPGEngine.h  core.h  inputs.h  player.h
rpg_maker/src/: RPGEngine.cpp  core.cpp  imgui.ini  main.cpp
